# UAL

./: .gitignore  API_REFERENCE.md  BOUNTIES.md  CONTRIBUTING.md  HACKER_NEWS_LAUNCH.md  LAUNCH_POST.md  MANIFEST.in  MANIFESTO.md  README.md  README_ADVANCED.md  README_zh-CN.md  TEST_REPORT.md  pytest.ini  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bounty_claim.md  bug_report.md  feature_request.md
docs/: HARDWARE_INTEGRATION_zh-CN.md  LAUNCH_STRATEGY.md  SOCIAL_PROTOCOL_zh-CN.md  VIDEO_SCRIPT_zh-CN.md
examples/: advanced_demo.py  dashboard.py  drone_demo.py  generalization_demo.py  hello_world.py  my_universal.yaml  social_chat_demo.py  the_great_demo.py  universal_demo.py  virtual_agent_demo.py  visualizer_demo.py
spec/: UAL_SPEC_V1.md  ual.proto
src/ual/: __init__.py  atlas.py  atlas.yaml  cli.py  consensus.py  core.py  ecc.py  gateway.py  llm_client.py  parser.py  registry_manager.py  state.py  ual_pb2.py  utils.py  visualizer.py
src/ual-embedded/: CMakeLists.txt  README.md  ual.proto  ual_core.c  ual_core.h
src/ual-embedded/examples/arduino_led/: arduino_led.ino
src/ual-studio/backend/: app.py  requirements.txt
src/ual-studio/frontend/: package-lock.json  (+2 more)
src/ual-tiny/: ual_tiny.h
src/ual_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: run_tests.py  test_core.py  test_parser.py  test_scenarios.py
tools/: benchmark.py  benchmark_parser.py  doc_gen.py  evolution_lab.py  hub_sync.py  pkg_manager.py  ual_debugger_gui.py
ual-rs/: Cargo.toml
ual-rs/src/: atlas.rs  codec.rs  lib.rs  types.rs
(+2 files in other folders)
